[package]
name = "jmespath2"
version = "0.1.0"
edition = "2021"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
lazy-regex = "2.2.2"
num = "0.4.0"
pest = "2.1.3"
recap = "0.1.1"
serde = "1.0.132"
serde_json = "1.0.73"
static_assertions = "1.1.0"
thiserror = "1.0.30"

[features]
