[package]
name = "jmespath-native"
version = "0.1.0"
edition = "2021"
description = "A rustier JMESPath"
license = "MIT"
repository = "https://github.com/aatifsyed/jmespath-native"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
lazy-regex = "2.2.2"
# num = "0.4.0"
# pest = "2.1.3"
serde_json = "1.0.73"
slyce = "0.3.1"
thiserror = "1.0.30"

[features]
